# minimal-docker

./: Cargo.toml  Dockerfile  Makefile
src/: main.rs
