[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.1"
reqwest = {version="0.11.6", features=["rustls-tls", "json"], default-features = false}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
tokio = { version = "1.13.0", features = ["full"] }
